--- a/lernify/package.json
+++ b/lernify/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@gsap/react": "^2.1.2",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "framer-motion": "^12.23.13",
+    "gsap": "^3.13.0",
     "react": "^19.1.1",
+    "react-bits": "^1.0.5",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-native-web": "^0.21.1",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
