--- a/lernify/package.json
+++ b/lernify/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.3.2",
     "framer-motion": "^12.23.13",
     "gsap": "^3.13.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-bits": "^1.0.5",
     "react-dom": "^19.1.1",
