--- a/lernify/package.json
+++ b/lernify/package.json
@@ -23,7 +23,9 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-native-web": "^0.21.1",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
