--- a/lernify/package.json
+++ b/lernify/package.json
@@ -15,14 +15,19 @@
     "@gsap/react": "^2.1.2",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.13",
     "gsap": "^3.13.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-bits": "^1.0.5",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-native-web": "^0.21.1",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
